<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:checked="true"
            android:id="@+id/ar_fragment"
            android:title="@string/augmented_reality"/>
        <item
            android:enabled="false"
            android:id="@+id/nav_second_fragment"
            android:title="@string/virtual_reality"/>
        <item
            android:enabled="false"
            android:id="@+id/nav_third_fragment"
            android:title="@string/another_reality"/>

        <item android:title="@string/menu_other">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_settings"
                        android:title="@string/menu_settings"/>
                    <!--<item-->
                        <!--android:title="Sub item 2"/>-->
                </group>
            </menu>
        </item>

    </group>
    <group android:id="@+id/nav_footer">
        <item
            android:id="@+id/nav_logout"
            android:title="@string/logout"/>
    </group>
</menu>