<?xml version="1.0" encoding="utf-8"?>


<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_margin="6dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:elevation="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/item_mu_heading"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/subheading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/item_mu_subheading"
            android:textAlignment="center"
            android:textSize="20sp"/>

        <TextView
            android:textColor="@color/black"
            android:textSize="16sp"
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/item_mu_description"
            android:textAlignment="textStart"/>

        <com.android.volley.toolbox.NetworkImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/features"
            android:textColor="@color/black"
            android:textSize="18sp"/>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <RatingBar
            android:isIndicator="true"
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:max="5"
            android:rating="3"
            android:stepSize="0.1"/>

        <Button
            android:id="@+id/start_preview_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_preview"/>

    </LinearLayout>
</android.support.v7.widget.CardView>
