<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_register"
    android:fillViewport="true"
    android:id="@+id/root_layout"
    android:padding="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/detail_container"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:orientation="vertical"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true">

            <EditText
                android:visibility="gone"
                android:id="@+id/usernameEt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/input_register_bg"
                android:hint="@string/hint_username"
                android:inputType="text"
                android:maxLines="1"
                android:padding="10dp"
                android:textColor="@color/input_register"
                android:textColorHint="@color/input_register_hint"/>

            <EditText
                android:visibility="gone"
                android:id="@+id/fullnameEt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/input_register_bg"
                android:hint="@string/hint_fullname"
                android:inputType="textCapWords|textPersonName"
                android:maxLines="1"
                android:padding="10dp"
                android:textColor="@color/input_register"
                android:textColorHint="@color/input_register_hint"/>

            <EditText
                android:id="@+id/emailEt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/input_register_bg"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:maxLines="1"
                android:textColor="@color/input_register"
                android:textColorHint="@color/input_register_hint" />

            <EditText
                android:id="@+id/passwordEt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/input_register_bg"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:maxLines="1"
                android:nextFocusForward="@+id/btnLoginRegister"
                android:textColor="@color/input_register"
                android:textColorHint="@color/input_register_hint" />

            <TextView
                android:layout_marginTop="6dp"
                android:visibility="gone"
                android:id="@+id/errorTv"
                android:textColor="@color/red"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <ProgressBar
                android:visibility="visible"
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:indeterminateOnly="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:visibility="visible"
                android:id="@+id/btnLoginRegister"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:background="#ea4c88"
                android:text="@string/btn_login"
                android:textColor="@color/white" />

            <!-- Link to Login Screen -->

            <Button
                android:id="@+id/btnLinkToLoginRegisterScreen"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dip"
                android:background="@null"
                android:text="@string/btn_link_to_register"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15dp" />

        </LinearLayout>
    </RelativeLayout>

</ScrollView>
